Fix the solution by adding extra space below text
Adding some extra space below text makes the modal
look like the desired outcome.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -88,3 +88,7 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.text {
+  margin-bottom: 8px;
+}
